# WhatToEat

./: .env.prod.example  .gitignore  CLAUDE.md  DEPLOY.md  docker-compose.prod.yml  docker-compose.yml  file.json
backend/: .dockerignore  .env.example  .env.prod.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 4c01bbe5cc6f_initial_schema.py  a1b2c3d4e5f6_add_is_featured_to_recipe.py  b2c3d4e5f6a7_add_featured_sync_tables.py
backend/app/: main.py
backend/app/api/: auth.py  categories.py  cooking_history.py  files.py  images.py  ingredients.py  recipes.py  steps.py  users.py
backend/app/core/: config.py  constants.py  database.py  dependencies.py  exceptions.py  redis.py  security.py
backend/app/models/: base.py  category.py  cooking_history.py  dismissed_featured.py  favorite.py  featured_sync.py  image.py  ingredient.py  recipe.py  step.py  user.py
backend/app/repositories/: base.py  category.py  cooking_history.py  favorite.py  image.py  ingredient.py  recipe.py  step.py  user.py
backend/app/schemas/: auth.py  category.py  cooking_history.py  favorite.py  image.py  ingredient.py  pagination.py  recipe.py  step.py  user.py
backend/app/services/: auth.py  category.py  cooking_history.py  favorite.py  image.py  ingredient.py  recipe.py  step.py  user.py
backend/scripts/: check_api.sh  create_admin.py  merge_docker_data_into_local.py  seed_caucasian_recipes.sql  seed_recipes.py
backend/tests/: conftest.py  test_health.py
(+124 files in other folders)
