[tool.poetry]
name = "whattoeat"
version = "0.1.0"
description = "WhatToEat — recipe management backend"
authors = ["WhatToEat Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115"
uvicorn = {version = ">=0.34", extras = ["standard"]}
sqlalchemy = {version = ">=2.0", extras = ["asyncio"]}
asyncpg = ">=0.30"
alembic = ">=1.14"
pydantic = ">=2.10"
pydantic-settings = ">=2.7"
python-jose = {version = ">=3.3", extras = ["cryptography"]}
bcrypt = ">=4.2"
redis = ">=5.2"
structlog = ">=24.4"
httpx = ">=0.28"
python-multipart = ">=0.0.9"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9"
mypy = ">=1.14"
pytest = ">=8.3"
pytest-asyncio = ">=0.25"
httpx = ">=0.28"
factory-boy = ">=3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
